# ChessModelServer

./: .gitignore  README.md  pyproject.toml
deploy/: chessmodelserver.service
docs/: benchmarking.md
src/human_chess_model/: __init__.py  checkpoint.py  constants.py  dataset.py  features.py  inference.py  metrics.py  model.py  move_encoding.py  preprocess.py
src/human_chess_model/cli/: download_model.py  eval.py  export_onnx.py  play.py  preprocess.py  serve_ws.py  train.py  uci.py
tests/: test_checkpoint.py  test_download_model.py  test_end_to_end_smoke.py  test_features.py  test_model.py  test_move_encoding.py  test_preprocess.py  test_serve_ws.py  test_uci.py
